# techchallenge

./: .gitignore  README.md  criar_tabelas.py  debug_scraper.py  main.py  pyproject.toml
api/v1/: api.py
api/v1/endpoints/: livro.py  livros.py  scraping.py  usuario.py
models/: __all_models.py  livros_model.py  scraping_model.py  usuario_model.py
schema/: usuario_schema.py
scripts/: web_scraping.py  web_scraping_api.py
utils/: auth.py  configs.py  database.py  deps.py  estado.py  gerar_aquivo.py  logger.py  security.py
