[project]
name = "techchallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.1.2",
    "fastapi>=0.123.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib==1.7.4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "sqlalchemy[future]>=2.0.44",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
]
